--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <head>
 <link rel='stylesheet' href='css/main/css'>
 <title<Mijn website</title>
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script> 
+$(function(){
+  $("#header").load("header.html"); 
+  $("#footer").load("footer.html"); 
+});
+</script> 
 </head>
 
 <body>
