--- a/paginas/overig/over_ons.html
+++ b/paginas/overig/over_ons.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head>
+    <link rel='stylesheet' href='css/main/main.css>
+    <title>Over ons</title>
+    
+  </head>
+    <body>
+                                 <h1>
+                               
+                                 </body>
+</html>
