--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ $(function(){
 </head>
 
 <body>
-<h1>Welkom op onze website</h1>
-<p>Dit is mijn website die ik net aangemaakt heb>
+    <h1>Welkom op onze website</h1>
+    <p>Dit is mijn website die ik net aangemaakt heb</p>
 </body>
 
 </html>
