--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-<link rel='stylesheet' href='css/main/css'>
-<title>Mijn website</title>
+<title></title>
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script> 
 $(function(){
@@ -10,10 +9,9 @@ $(function(){
 });
 </script> 
 </head>
-
 <body>
-    <h1>Welkom op onze website</h1>
-    <p>Dit is mijn website die ik net aangemaakt heb</p>
+<div id="header"></div>
+<h1>Website</h1>
+<div id="footer"></div>
 </body>
-
 </html>
