--- a/header.html
+++ b/header.html
@@ -1,3 +1,18 @@
 <html>
+<head>
+<title></title>
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script> 
+$(function(){
+  $("#header").load("header.html"); 
+  $("#footer").load("footer.html"); 
+});
+</script> 
+</head>
+<body>
+<div id="header"></div>
+<!--Remaining section-->
+<div id="footer"></div>
+</body></head>
   <h1>Dit is de header</h1>
 </html>
