--- a/paginas/diensten/ipad.html
+++ b/paginas/diensten/ipad.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>my first editing</title>
+</head>
+<body>
+<h1> WELKOM</h1>
+<h3>diensten, ipad.</h3>
+<h6>welkom bij ipadhulp</h6>
+<p>hier vind je veel hulp over je ipad!!</p>
 
+</body>
+</html>
